Add the routing and mandatory training delete confirmation page

--- a/src/app/features/add-mandatory-training/list-mandatory-training/list-mandatory-training.component.html
+++ b/src/app/features/add-mandatory-training/list-mandatory-training/list-mandatory-training.component.html
@@ -23,7 +23,13 @@
     class="govuk-grid-column-one-thirds govuk-!-margin-bottom-6 govuk-!-margin-right-4 govuk-util__align-right govuk-list govuk-list--inline"
     *ngIf="existingMandatoryTrainings?.mandatoryTrainingCount > 0"
   >
-    <a data-testid="removeMandatoryTrainingLink" href="#">Remove all mandatory training categories</a>
+    <a
+      data-testid="removeMandatoryTrainingLink"
+      draggable="false"
+      role="button"
+      [routerLink]="['/workplace', establishment.uid, 'add-mandatory-training', 'remove-all-mandatory-training']"
+      >Remove all mandatory training categories</a
+    >
   </div>
 </div>
 
