feat(addMandatoryTrainingCategoryAmendments): Updated navigation across the mandatory details flow

--- a/src/app/features/add-mandatory-training/list-mandatory-training/list-mandatory-training.component.html
+++ b/src/app/features/add-mandatory-training/list-mandatory-training/list-mandatory-training.component.html
@@ -15,7 +15,9 @@
     </p>
   </div>
   <div class="govuk-grid-column-one-half govuk-util__align-right" data-testid="mandatoryTrainingButton">
-    <button class="govuk-button">Add a mandatory training category</button>
+    <button (click)="navigateToAddNewMandatoryTraining()" class="govuk-button">
+      Add a mandatory training category
+    </button>
   </div>
 </div>
 <div class="govuk-grid-row">
