--- a/src/app/features/workers/new-training-qualifications-record/new-training-and-qualifications-record.component.html
+++ b/src/app/features/workers/new-training-qualifications-record/new-training-and-qualifications-record.component.html
@@ -138,7 +138,7 @@
             *ngIf="canEditWorker"
             draggable="false"
             role="button"
-            [routerLink]="['/workplace', workplace.uid, 'add-mandatory-training']"
+            [routerLink]="['/workplace', workplace.uid, 'add-and-manage-mandatory-training']"
           >
             Manage mandatory training
           </a>
