--- a/src/app/shared/components/training-link-panel/training-link-panel.component.html
+++ b/src/app/shared/components/training-link-panel/training-link-panel.component.html
@@ -2,7 +2,7 @@
   <div *ngIf="canEditEstablishment" class="govuk-grid-column-one-third">
     <a
       class="govuk-list govuk-list--inline govuk-!-margin-right-5"
-      [routerLink]="['/workplace', workplace.uid, 'add-mandatory-training']"
+      [routerLink]="['/workplace', workplace.uid, 'add-and-manage-mandatory-training']"
       >Add and manage mandatory training categories
     </a>
   </div>
