add validation to the nursing specialism component, refactor question component to remove the unnecessary skip case in the navigation function and update failing tests

--- a/src/app/shared/components/staff-record-summary/basic-record/basic-record.component.html
+++ b/src/app/shared/components/staff-record-summary/basic-record/basic-record.component.html
@@ -4,7 +4,9 @@
   style="border: 1px solid black"
 >
   <div class="govuk-summary-list__row">
-    <dt class="govuk-summary-list__key govuk-!-padding-right-0" style="border: 1px solid black">Name or ID number</dt>
+    <dt class="govuk-summary-list__key govuk-!-padding-right-0 govuk-!-width-one-half" style="border: 1px solid black">
+      Name or ID number
+    </dt>
     <dd class="govuk-summary-list__value govuk-!-padding-left-9" style="border: 1px solid black">
       {{ worker.nameOrId }}
     </dd>
