--- a/src/app/shared/components/submit-button/submit-button.component.html
+++ b/src/app/shared/components/submit-button/submit-button.component.html
@@ -25,7 +25,9 @@
 
         <div *ngIf="recordSummary" class="govuk-!-margin-left-9">
           <span class="govuk-visually-hidden">or</span>
-          <a class="govuk-button govuk-button--link" (click)="onLinkClick($event, 'skip', false)">Skip this question</a>
+          <a class="govuk-button govuk-button--link" (click)="onLinkClick($event, 'continue', false)"
+            >Skip this question</a
+          >
         </div>
         <div *ngIf="canExit" class="govuk-!-margin-left-9">
           <span class="govuk-visually-hidden">or</span>
