--- a/src/app/shared/components/staff-record-summary/qualifications-and-training/qualifications-and-training.component.html
+++ b/src/app/shared/components/staff-record-summary/qualifications-and-training/qualifications-and-training.component.html
@@ -1,7 +1,7 @@
 <h2 class="govuk-heading-m">Training and qualifications</h2>
 <dl class="govuk-summary-list asc-summarylist-border-top govuk-!-margin-bottom-0">
   <div class="govuk-summary-list__row">
-    <dt class="govuk-summary-list__key">Care Certificate</dt>
+    <dt class="govuk-summary-list__key govuk-!-width-one-half">Care Certificate</dt>
 
     <dd class="govuk-summary-list__value govuk-!-padding-left-9">
       <app-summary-record-value
