--- a/src/app/shared/components/staff-record-summary/basic-record/basic-record.component.html
+++ b/src/app/shared/components/staff-record-summary/basic-record/basic-record.component.html
@@ -1,13 +1,8 @@
 <h2 class="govuk-heading-m">{{ basicTitle }}</h2>
-<dl
-  class="govuk-summary-list govuk-summary-list--no-border asc-summarylist-border-top asc-summarylist-border-bottom"
-  style="border: 1px solid black"
->
+<dl class="govuk-summary-list govuk-summary-list--no-border asc-summarylist-border-top asc-summarylist-border-bottom">
   <div class="govuk-summary-list__row">
-    <dt class="govuk-summary-list__key govuk-!-padding-right-0 govuk-!-width-one-half" style="border: 1px solid black">
-      Name or ID number
-    </dt>
-    <dd class="govuk-summary-list__value govuk-!-padding-left-9" style="border: 1px solid black">
+    <dt class="govuk-summary-list__key govuk-!-padding-right-0 govuk-!-width-one-half">Name or ID number</dt>
+    <dd class="govuk-summary-list__value govuk-!-padding-left-9">
       {{ worker.nameOrId }}
     </dd>
     <dd *ngIf="canEditWorker" class="govuk-summary-list__actions">
