--- a/src/app/shared/components/staff-record-summary/personal-details/personal-details.component.html
+++ b/src/app/shared/components/staff-record-summary/personal-details/personal-details.component.html
@@ -1,7 +1,7 @@
 <h2 class="govuk-heading-m">Personal details</h2>
 <dl class="govuk-summary-list asc-summarylist-border-top">
   <div class="govuk-summary-list__row">
-    <dt class="govuk-summary-list__key">Date of birth</dt>
+    <dt class="govuk-summary-list__key govuk-!-width-one-half">Date of birth</dt>
     <dd class="govuk-summary-list__value govuk-list--inline govuk-!-padding-left-9">
       <app-summary-record-value
         [wdfView]="wdfView"
