Changed width of Mandatory Details summary page table columns

--- a/src/app/features/workers/mandatory-details/mandatory-details.component.html
+++ b/src/app/features/workers/mandatory-details/mandatory-details.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="worker">
-  <div class="govuk-grid-column-two-thirds-from-desktop govuk-!-padding-left-0" style="border: 1px solid black">
+  <div class="govuk-grid-column-two-thirds-from-desktop govuk-!-padding-left-0">
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-full">
         <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
@@ -33,7 +33,7 @@
       </button>
     </div>
   </div>
-  <div class="govuk-grid-column-one-third-from-desktop" style="border: 1px solid black">
+  <div class="govuk-grid-column-one-third-from-desktop">
     <div class="govuk-!-margin-left-8">
       <app-progress-bar
         data-testid="progress-bar"
