--- a/src/app/shared/components/staff-record-summary/basic-record/basic-record.component.html
+++ b/src/app/shared/components/staff-record-summary/basic-record/basic-record.component.html
@@ -2,7 +2,7 @@
 <dl class="govuk-summary-list govuk-summary-list--no-border asc-summarylist-border-top asc-summarylist-border-bottom">
   <div class="govuk-summary-list__row">
     <dt class="govuk-summary-list__key govuk-!-padding-right-0 govuk-!-width-one-half">Name or ID number</dt>
-    <dd class="govuk-summary-list__value govuk-!-padding-left-9">
+    <dd class="govuk-summary-list__value" [ngClass]="{ 'govuk-!-padding-left-9': !mandatoryDetailsPage }">
       {{ worker.nameOrId }}
     </dd>
     <dd *ngIf="canEditWorker" class="govuk-summary-list__actions">
@@ -16,7 +16,7 @@
 
   <div class="govuk-summary-list__row">
     <dt class="govuk-summary-list__key">Main job role</dt>
-    <dd class="govuk-summary-list__value govuk-!-padding-left-9">
+    <dd class="govuk-summary-list__value" [ngClass]="{ 'govuk-!-padding-left-9': !mandatoryDetailsPage }">
       <app-summary-record-value
         [wdfView]="wdfView"
         [wdfValue]="worker.wdf?.mainJob"
@@ -53,7 +53,7 @@
 
   <div class="govuk-summary-list__row">
     <dt class="govuk-summary-list__key">Contract type</dt>
-    <dd class="govuk-summary-list__value govuk-!-padding-left-9">
+    <dd class="govuk-summary-list__value" [ngClass]="{ 'govuk-!-padding-left-9': !mandatoryDetailsPage }">
       <app-summary-record-value
         [wdfView]="wdfView"
         [wdfValue]="worker.wdf?.contract"
