feat(addMandatoryTrainingCategoryAmendments): Training categories now filter options if mandatory training already exists

--- a/src/app/features/add-mandatory-training/add-mandatory-training.component.html
+++ b/src/app/features/add-mandatory-training/add-mandatory-training.component.html
@@ -18,7 +18,7 @@
     >
       <div class="govuk-form-group">
         <div class="govuk-grid-column-two-thirds">
-          <label class="govuk-label govuk-!-margin-top-4" for="trainingCategory"> Mandatory training </label>
+          <label class="govuk-label govuk-!-margin-top-4" for="trainingCategory"> Training category </label>
           <span *ngIf="submitted" id="trainingCategory-error" class="govuk-error-message">
             <ng-container *ngIf="submitted && form.get('trainingCategory').invalid">
               <label for="trainingCategory">Select the mandatory training</label>
