remove old backlink service from all components and test files inside the workers folder

--- a/src/app/features/workers/british-citizenship/british-citizenship.component.html
+++ b/src/app/features/workers/british-citizenship/british-citizenship.component.html
@@ -30,7 +30,7 @@
         </fieldset>
       </div>
     </div>
-    <div class="govuk-grid-column-one-third" *ngIf="insideFlow && !insideBritishCitizenshipSummaryFlow">
+    <div class="govuk-grid-column-one-third" *ngIf="insideFlow">
       <div class="govuk-!-margin-left-8">
         <app-progress-bar
           data-testid="progress-bar"
