--- a/src/app/shared/components/search-input/search-input.component.html
+++ b/src/app/shared/components/search-input/search-input.component.html
@@ -1,6 +1,6 @@
 <div class="govuk-!-width-full input--search">
   <label [for]="ref" class="govuk-label"
-    >Search<span *ngIf="accessibleLabel" class="govuk-visually-hidden"> {{ accessibleLabel }}</span></label
+    >{{ label }}<span *ngIf="accessibleLabel" class="govuk-visually-hidden"> {{ accessibleLabel }}</span></label
   >
   <div class="govuk-grid-row govuk-!-margin-0">
     <div class="govuk-grid-column-two-thirds govuk__flex govuk-util__light-bg govuk-!-padding-2">
