--- a/src/app/features/add-multiple-training/select-staff/select-staff.component.html
+++ b/src/app/features/add-multiple-training/select-staff/select-staff.component.html
@@ -2,9 +2,9 @@
 </app-error-summary>
 
 <form #formEl [formGroup]="form" (ngSubmit)="onSubmit()">
-  <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds-from-desktop">
-      <fieldset class="govuk-fieldset">
+  <fieldset class="govuk-fieldset">
+    <div class="govuk-grid-row">
+      <div class="govuk-grid-column-two-thirds-from-desktop">
         <legend class="govuk-fieldset__legend govuk-fieldset__legend--l govuk-!-margin-bottom-7">
           <span class="govuk-caption-l">Add multiple records</span>
           <h1 class="govuk-fieldset__heading">Select all those who you want to add a record for</h1>
@@ -13,8 +13,11 @@
         <div *ngIf="showSearchBar" class="govuk-!-margin-bottom-8">
           <app-search-input label="Search for staff" accessibleLabel="search for staff"></app-search-input>
         </div>
+      </div>
+    </div>
 
-        <!-- <div class="govuk-grid-column-two-thirds"> -->
+    <div class="govuk-grid-row">
+      <div class="govuk-grid-column-two-thirds">
         <div class="govuk-!-font-size-19 govuk-!-margin-bottom-5">
           <span class="govuk-!-font-weight-bold">Showing x of {{ workers.length }} staff</span>
           <a href="#" (click)="selectAllWorkers($event)" class="govuk-util__float-right">
@@ -79,10 +82,12 @@
           <button class="govuk-button govuk-!-margin-right-9 govuk-!-margin-top-7" type="submit">Continue</button>
           <a role="button" class="govuk-button govuk-button--link govuk-!-margin-left-9" (click)="onCancel()">Cancel</a>
         </div>
-      </fieldset>
+      </div>
+      <div class="govuk-grid-column-one-third">
+        <div class="govuk-!-margin-left-5 govuk-!-margin-top-8">
+          <app-selected-staff-panel [selectedWorkerCount]="selectedWorkers.length"></app-selected-staff-panel>
+        </div>
+      </div>
     </div>
-    <div class="govuk-grid-columm-one-third">
-      <app-selected-staff-panel [selectedWorkerCount]="selectedWorkers.length"></app-selected-staff-panel>
-    </div>
-  </div>
+  </fieldset>
 </form>
