--- a/src/app/features/add-mandatory-training/add-mandatory-training.component.html
+++ b/src/app/features/add-mandatory-training/add-mandatory-training.component.html
@@ -12,50 +12,48 @@
 </div>
 <form #formEl novalidate (ngSubmit)="onSubmit()" [formGroup]="form">
   <fieldset class="govuk-fieldset">
-    <div
-      class="govuk-grid-row govuk-!-margin-bottom-1"
-      [class.govuk-form-group--error]="submitted && form.get('trainingCategory').invalid"
-    >
-      <div class="govuk-form-group">
-        <div class="govuk-grid-column-two-thirds">
-          <label class="govuk-label govuk-!-margin-top-4" for="trainingCategory"> Training category </label>
-          <span *ngIf="submitted" id="trainingCategory-error" class="govuk-error-message">
-            <ng-container *ngIf="submitted && form.get('trainingCategory').invalid">
-              <label for="trainingCategory">Select the mandatory training</label>
-            </ng-container>
-          </span>
-          <select
-            class="govuk-select govuk-!-width-full"
-            [class.govuk-select--error]="submitted && form.get('trainingCategory').invalid"
-            [formControlName]="'trainingCategory'"
-            id="trainingCategory"
-            name="trainingCategory"
-          >
-            <option [ngValue]="null">Select training category</option>
-            <option *ngFor="let training of trainings" [value]="training.id">
-              {{ training.category }}
-            </option>
-          </select>
-        </div>
+    <div class="govuk-grid-column-two-thirds">
+      <div
+        class="govuk-grid-row govuk-form-group govuk-!-margin-bottom-4"
+        [class.govuk-form-group--error]="submitted && form.get('trainingCategory').invalid"
+      >
+        <label class="govuk-label" for="trainingCategory"> Training category </label>
+        <span *ngIf="submitted" class="govuk-error-message">
+          <ng-container *ngIf="submitted && form.get('trainingCategory').invalid">
+            <label id="trainingCategory-error" for="trainingCategory">Select the mandatory training</label>
+          </ng-container>
+        </span>
+        <select
+          class="govuk-select govuk-!-width-three-quarters"
+          [class.govuk-select--error]="submitted && form.get('trainingCategory').invalid"
+          [formControlName]="'trainingCategory'"
+          id="trainingCategory"
+          name="trainingCategory"
+        >
+          <option [ngValue]="null">Select training category</option>
+          <option *ngFor="let training of trainings" [value]="training.id">
+            {{ training.category }}
+          </option>
+        </select>
       </div>
     </div>
     <div class="govuk-grid-row">
-      <div class="govuk-grid-column-two-thirds govuk-!-margin-top-2">
-        <div class="govuk-form-group">
+      <div class="govuk-grid-column-two-thirds">
+        <div class="govuk-form-group govuk-!-margin-bottom-1">
           <legend class="govuk-fieldset__legend">
             <span class="govuk-label"> Which job roles need this training? </span>
           </legend>
           <div class="govuk-radios govuk-radios--inline">
-            <div class="govuk-radios__item" *ngFor="let option of vacanciesOptions; let i = index">
+            <div class="govuk-radios__item" *ngFor="let option of allOrSelectedJobRoleOptions; let i = index">
               <input
                 class="govuk-radios__input"
-                id="vacancyType-{{ i }}"
-                [formControlName]="'vacancyType'"
+                id="allOrSelectedJobRoles-{{ i }}"
+                [formControlName]="'allOrSelectedJobRoles'"
                 type="radio"
                 [value]="option.value"
                 (change)="onVacancyTypeSelectionChange()"
               />
-              <label class="govuk-label govuk-radios__label" for="vacancyType-{{ i }}">
+              <label class="govuk-label govuk-radios__label" for="allOrSelectedJobRoles-{{ i }}">
                 {{ option.label }}
               </label>
             </div>
@@ -65,50 +63,61 @@
     </div>
     <div
       class="govuk-grid-row govuk-radios__conditional"
-      *ngIf="form.controls.vacancies.value.length > 0"
-      formArrayName="vacancies"
+      *ngIf="form.controls.selectedJobRoles.value.length > 0"
+      formArrayName="selectedJobRoles"
     >
       <div
         [formGroupName]="j"
-        *ngFor="let vacancy of form.controls.vacancies.controls; let j = index"
-        [class.govuk-form-group--error]="submitted && vacancy.get('id').invalid"
+        *ngFor="let selectedJobRole of selectedJobRolesArray.controls; let j = index"
+        [class.govuk-form-group--error]="submitted && selectedJobRole.get('id').invalid"
       >
-        <div class="govuk-grid-row govuk-!-margin-bottom-6">
-          <div class="govuk-grid-column-one-half">
-            <div class="govuk-form-group">
-              <label class="govuk-label" for="id-{{ j }}"> Job role </label>
-              <span *ngIf="submitted && vacancy.get('id').invalid" id="id-{{ j }}-error" class="govuk-error-message">
-                <ng-container *ngIf="vacancy.get('id').invalid"> Select the job role </ng-container>
+        <div class="govuk-grid-row govuk-!-margin-bottom-3">
+          <div class="govuk-grid-column-two-thirds">
+            <div class="govuk-form-group govuk-!-margin-bottom-0">
+              <label class="govuk-label" for="id-{{ j }}"> Job role {{ j + 1 }}</label>
+              <span *ngIf="submitted && selectedJobRole.get('id').invalid" class="govuk-error-message">
+                <ng-container *ngIf="selectedJobRole.get('id').invalid">
+                  <label id="selectedJobRoles-id-{{ j }}-error" for="id-{{ j }}"
+                    >Select the job role</label
+                  ></ng-container
+                >
               </span>
-              <select
-                class="govuk-select"
-                [class.govuk-select--error]="submitted && vacancy.get('id').invalid"
-                [formControlName]="'id'"
-                id="id-{{ j }}"
-              >
-                <option [ngValue]="null">Select job role</option>
-                <option *ngFor="let job of this.filteredJobs[j]" [value]="job.id">
-                  {{ job.title }}
-                </option>
-              </select>
+              <div class="govuk-grid-row">
+                <div class="govuk-grid-column-two-thirds">
+                  <select
+                    class="govuk-select govuk-!-width-full"
+                    [class.govuk-select--error]="submitted && selectedJobRole.get('id').invalid"
+                    [formControlName]="'id'"
+                    id="id-{{ j }}"
+                  >
+                    <option [ngValue]="null">Select job role</option>
+                    <option *ngFor="let job of this.filterJobList(j)" [value]="job.id">
+                      {{ job.title }}
+                    </option>
+                  </select>
+                </div>
+                <div class="govuk-grid-column-one-third govuk-!-margin-top-1 govuk-!-padding-left-1">
+                  <a
+                    *ngIf="form.controls.selectedJobRoles.value.length > 1"
+                    href="#"
+                    class="govuk-list govuk-list--inline"
+                    (click)="removeVacancy($event, j)"
+                    >Remove
+                  </a>
+                </div>
+              </div>
             </div>
-          </div>
-          <div class="govuk-grid-column-one-half govuk-!-margin-top-6">
-            <a
-              *ngIf="form.controls.vacancies.value.length > 1"
-              href="#"
-              class="govuk-list govuk-list--inline"
-              (click)="removeVacancy($event, j)"
-              >Remove
-            </a>
           </div>
         </div>
       </div>
       <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
           <button
-            *ngIf="form.controls.vacancies.value.length > 0 && form.controls.vacancies.value.length < jobs.length"
-            class="govuk-button govuk-button--secondary"
+            *ngIf="
+              form.controls.selectedJobRoles.value.length > 0 &&
+              form.controls.selectedJobRoles.value.length < jobs.length
+            "
+            class="govuk-button govuk-button--secondary govuk-!-margin-top-3 govuk-!-margin-bottom-0"
             type="button"
             (click)="addVacancy()"
           >
@@ -118,5 +127,8 @@
       </div>
     </div>
   </fieldset>
-  <app-submit-exit-buttons [exit]="'Cancel'" [return]="return"></app-submit-exit-buttons>
+  <hr
+    class="govuk-section-break govuk-section-break--l govuk-section-break--visible govuk-!-margin-bottom-8 govuk-!-margin-top-3"
+  />
+  <app-submit-exit-buttons [exit]="'Cancel'" [return]="true"></app-submit-exit-buttons>
 </form>
