--- a/src/app/shared/directives/add-edit-training/add-edit-training.component.html
+++ b/src/app/shared/directives/add-edit-training/add-edit-training.component.html
@@ -14,6 +14,7 @@
     <div class="govuk-grid-column-two-thirds-from-desktop">
       <fieldset class="govuk-fieldset">
         <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+          <span class="govuk-caption-l" data-testid="section-heading">{{ section }}</span>
           <h1 class="govuk-fieldset__heading">
             {{ title }}
           </h1>
@@ -98,7 +99,7 @@
                   type="radio"
                   value="Don't know"
                 />
-                <label class="govuk-label govuk-radios__label" for="accredited-dont-know"> Don't know </label>
+                <label class="govuk-label govuk-radios__label" for="accredited-dont-know"> I do not know </label>
               </div>
             </div>
           </fieldset>
