--- a/src/app/features/add-multiple-training/select-staff/select-staff.component.html
+++ b/src/app/features/add-multiple-training/select-staff/select-staff.component.html
@@ -11,21 +11,50 @@
         </legend>
 
         <div *ngIf="showSearchBar" class="govuk-!-margin-bottom-8">
-          <app-search-input label="Search for staff" accessibleLabel="search for staff"></app-search-input>
+          <app-search-input
+            label="Search for staff"
+            accessibleLabel="search for staff"
+            (emitInput)="handleSearch($event)"
+            [showClearResults]="false"
+          ></app-search-input>
         </div>
       </div>
     </div>
 
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
+        <ng-container *ngIf="searchResults">
+          <div class="govuk-!-margin-bottom-8">
+            <div class="govuk-!-font-size-19 govuk-!-margin-bottom-5">
+              <span class="govuk-!-font-weight-bold">Showing search results</span>
+              <a href="#" (click)="handleResetSearch($event)" class="govuk-util__float-right"> Clear search results</a>
+            </div>
+            <dl class="govuk-summary-list govuk-summary-list--top-border">
+              <ng-container *ngFor="let worker of searchResults">
+                <div class="govuk-summary-list__row">
+                  <dt class="govuk-summary-list__key">{{ worker.nameOrId }}</dt>
+                  <dd class="govuk-summary-list__value">{{ worker.mainJob.title }}</dd>
+                  <dd class="govuk-summary-list__actions">
+                    <a href="#" (click)="selectWorker($event, worker.uid)">{{
+                      selectAll || selectedWorkers?.includes(worker.uid) ? 'Deselect' : 'Select'
+                    }}</a>
+                  </dd>
+                </div>
+              </ng-container>
+            </dl>
+          </div>
+        </ng-container>
+
         <div class="govuk-!-font-size-19 govuk-!-margin-bottom-5">
-          <span class="govuk-!-font-weight-bold">Showing x of {{ workers.length }} staff</span>
+          <span class="govuk-!-font-weight-bold"
+            >Showing {{ paginatedWorkers?.length }} of {{ totalWorkerCount }} staff</span
+          >
           <a href="#" (click)="selectAllWorkers($event)" class="govuk-util__float-right">
             {{ selectAll ? 'Deselect All' : 'Select all' }}</a
           >
         </div>
         <dl class="govuk-summary-list govuk-summary-list--top-border">
-          <ng-container *ngFor="let worker of workers">
+          <ng-container *ngFor="let worker of paginatedWorkers">
             <div class="govuk-summary-list__row">
               <dt class="govuk-summary-list__key">{{ worker.nameOrId }}</dt>
               <dd class="govuk-summary-list__value">{{ worker.mainJob.title }}</dd>
@@ -37,6 +66,12 @@
             </div>
           </ng-container>
         </dl>
+        <app-pagination
+          [itemsPerPage]="itemsPerPage"
+          [totalNoOfItems]="totalWorkerCount"
+          (currentPageIndexChange)="handlePageUpdate($event)"
+          [currentPageIndex]="currentPageIndex"
+        ></app-pagination>
         <!-- </div> -->
         <!-- <div class="govuk-form-group" [class.govuk-form-group--error]="submitted && form.invalid">
         <span *ngIf="submitted && form?.invalid" id="selectStaff-error" class="govuk-error-message">
@@ -79,7 +114,7 @@
         </div>
       </div> -->
         <div class="govuk-button-group">
-          <button class="govuk-button govuk-!-margin-right-9 govuk-!-margin-top-7" type="submit">Continue</button>
+          <button class="govuk-button govuk-!-margin-right-9" type="submit">Continue</button>
           <a role="button" class="govuk-button govuk-button--link govuk-!-margin-left-9" (click)="onCancel()">Cancel</a>
         </div>
       </div>
