--- a/src/app/features/add-multiple-training/select-staff/select-staff.component.html
+++ b/src/app/features/add-multiple-training/select-staff/select-staff.component.html
@@ -1,79 +1,90 @@
-<app-error-summary *ngIf="submitted && form?.invalid" [formErrorsMap]="formErrorsMap" [form]="form">
-</app-error-summary>
+<!-- <app-error-summary *ngIf="submitted && form?.invalid" [formErrorsMap]="formErrorsMap" [form]="form">
+</app-error-summary> -->
 
-<form #formEl [formGroup]="form" (ngSubmit)="onSubmit()">
-  <fieldset class="govuk-fieldset">
-    <div class="govuk-grid-row">
-      <div class="govuk-grid-column-two-thirds-from-desktop">
-        <legend class="govuk-fieldset__legend govuk-fieldset__legend--l govuk-!-margin-bottom-7">
-          <span class="govuk-caption-l">Add multiple records</span>
-          <h1 class="govuk-fieldset__heading">Select all those who you want to add a record for</h1>
-        </legend>
+<div class="govuk-grid-row">
+  <div class="govuk-grid-column-two-thirds-from-desktop">
+    <legend class="govuk-fieldset__legend govuk-fieldset__legend--l govuk-!-margin-bottom-7">
+      <span class="govuk-caption-l">Add multiple records</span>
+      <h1 class="govuk-fieldset__heading">Select all those who you want to add a record for</h1>
+    </legend>
 
-        <div *ngIf="showSearchBar" class="govuk-!-margin-bottom-8">
-          <app-search-input
-            label="Search for staff"
-            accessibleLabel="search for staff"
-            (emitInput)="handleSearch($event)"
-            [showClearResults]="false"
-          ></app-search-input>
-        </div>
-      </div>
+    <div *ngIf="showSearchBar" class="govuk-!-margin-bottom-8">
+      <app-search-input
+        label="Search for staff"
+        accessibleLabel="search for staff"
+        (emitInput)="handleSearch($event)"
+        [showClearResults]="false"
+      ></app-search-input>
     </div>
+  </div>
+</div>
 
-    <div class="govuk-grid-row">
-      <div class="govuk-grid-column-two-thirds">
-        <ng-container *ngIf="searchResults">
-          <div class="govuk-!-margin-bottom-8">
-            <div class="govuk-!-font-size-19 govuk-!-margin-bottom-5">
-              <span class="govuk-!-font-weight-bold">Showing search results</span>
-              <a href="#" (click)="handleResetSearch($event)" class="govuk-util__float-right"> Clear search results</a>
-            </div>
-            <dl class="govuk-summary-list govuk-summary-list--top-border">
-              <ng-container *ngFor="let worker of searchResults">
-                <div class="govuk-summary-list__row">
-                  <dt class="govuk-summary-list__key">{{ worker.nameOrId }}</dt>
-                  <dd class="govuk-summary-list__value">{{ worker.mainJob.title }}</dd>
-                  <dd class="govuk-summary-list__actions">
-                    <a href="#" (click)="selectWorker($event, worker.uid)">{{
-                      selectAll || selectedWorkers?.includes(worker.uid) ? 'Deselect' : 'Select'
-                    }}</a>
-                  </dd>
-                </div>
-              </ng-container>
-            </dl>
+<div class="govuk-grid-row">
+  <div class="govuk-grid-column-two-thirds">
+    <ng-container *ngIf="searchResults">
+      <div class="govuk-!-margin-bottom-8">
+        <ng-container *ngIf="searchResults.length > 0; else noResults">
+          <div class="govuk-!-font-size-19 govuk-!-margin-bottom-5">
+            <span class="govuk-!-font-weight-bold">Showing search results</span>
+            <a href="#" (click)="handleResetSearch($event)" class="govuk-util__float-right"> Clear search results</a>
           </div>
+          <dl class="govuk-summary-list govuk-summary-list--top-border">
+            <ng-container *ngFor="let worker of searchResults">
+              <div class="govuk-summary-list__row">
+                <dt class="govuk-summary-list__key">{{ worker.nameOrId }}</dt>
+                <dd class="govuk-summary-list__value">{{ worker.mainJob.title }}</dd>
+                <dd class="govuk-summary-list__actions">
+                  <a href="#" (click)="selectWorker($event, worker.uid)">{{
+                    selectAll || selectedWorkers?.includes(worker.uid) ? 'Deselect' : 'Select'
+                  }}</a>
+                </dd>
+              </div>
+            </ng-container>
+          </dl>
         </ng-container>
-
-        <div class="govuk-!-font-size-19 govuk-!-margin-bottom-5">
-          <span class="govuk-!-font-weight-bold"
-            >Showing {{ paginatedWorkers?.length }} of {{ totalWorkerCount }} staff</span
-          >
-          <a href="#" (click)="selectAllWorkers($event)" class="govuk-util__float-right">
-            {{ selectAll ? 'Deselect All' : 'Select all' }}</a
-          >
-        </div>
-        <dl class="govuk-summary-list govuk-summary-list--top-border">
-          <ng-container *ngFor="let worker of paginatedWorkers">
+        <ng-template #noResults>
+          <div class="govuk-!-font-size-19 govuk-!-margin-bottom-5">
+            <span class="govuk-!-font-weight-bold">There are no matching results</span>
+            <a href="#" (click)="handleResetSearch($event)" class="govuk-util__float-right"> Clear search results</a>
+          </div>
+          <dl class="govuk-summary-list govuk-summary-list--top-border">
             <div class="govuk-summary-list__row">
-              <dt class="govuk-summary-list__key">{{ worker.nameOrId }}</dt>
-              <dd class="govuk-summary-list__value">{{ worker.mainJob.title }}</dd>
-              <dd class="govuk-summary-list__actions">
-                <a href="#" (click)="selectWorker($event, worker.uid)">{{
-                  selectAll || selectedWorkers?.includes(worker.uid) ? 'Deselect' : 'Select'
-                }}</a>
-              </dd>
+              <dd class="govuk-summary-list__value">Make sure that your spelling is correct.</dd>
             </div>
-          </ng-container>
-        </dl>
-        <app-pagination
-          [itemsPerPage]="itemsPerPage"
-          [totalNoOfItems]="totalWorkerCount"
-          (currentPageIndexChange)="handlePageUpdate($event)"
-          [currentPageIndex]="currentPageIndex"
-        ></app-pagination>
-        <!-- </div> -->
-        <!-- <div class="govuk-form-group" [class.govuk-form-group--error]="submitted && form.invalid">
+          </dl>
+        </ng-template>
+      </div>
+    </ng-container>
+
+    <div class="govuk-!-font-size-19 govuk-!-margin-bottom-5">
+      <span class="govuk-!-font-weight-bold"
+        >Showing {{ paginatedWorkers?.length }} of {{ totalWorkerCount }} staff</span
+      >
+      <a href="#" (click)="selectAllWorkers($event)" class="govuk-util__float-right">
+        {{ selectAll ? 'Deselect All' : 'Select all' }}</a
+      >
+    </div>
+    <dl class="govuk-summary-list govuk-summary-list--top-border">
+      <ng-container *ngFor="let worker of paginatedWorkers">
+        <div class="govuk-summary-list__row">
+          <dt class="govuk-summary-list__key">{{ worker.nameOrId }}</dt>
+          <dd class="govuk-summary-list__value">{{ worker.mainJob.title }}</dd>
+          <dd class="govuk-summary-list__actions">
+            <a href="#" (click)="selectWorker($event, worker.uid)">{{
+              selectAll || selectedWorkers?.includes(worker.uid) ? 'Deselect' : 'Select'
+            }}</a>
+          </dd>
+        </div>
+      </ng-container>
+    </dl>
+    <app-pagination
+      [itemsPerPage]="itemsPerPage"
+      [totalNoOfItems]="totalWorkerCount"
+      (currentPageIndexChange)="handlePageUpdate($event)"
+      [currentPageIndex]="currentPageIndex"
+    ></app-pagination>
+    <!-- </div> -->
+    <!-- <div class="govuk-form-group" [class.govuk-form-group--error]="submitted && form.invalid">
         <span *ngIf="submitted && form?.invalid" id="selectStaff-error" class="govuk-error-message">
           <span class="govuk-visually-hidden">Error:</span>
           {{ getFirstErrorMessage('selectStaff') }}
@@ -113,16 +124,15 @@
           </ng-container>
         </div>
       </div> -->
-        <div class="govuk-button-group">
-          <button class="govuk-button govuk-!-margin-right-9" type="submit">Continue</button>
-          <a role="button" class="govuk-button govuk-button--link govuk-!-margin-left-9" (click)="onCancel()">Cancel</a>
-        </div>
-      </div>
-      <div class="govuk-grid-column-one-third">
-        <div class="govuk-!-margin-left-5 govuk-!-margin-top-8">
-          <app-selected-staff-panel [selectedWorkerCount]="selectedWorkers.length"></app-selected-staff-panel>
-        </div>
-      </div>
+    <div class="govuk-button-group">
+      <!-- <button class="govuk-button govuk-!-margin-right-9" type="submit">Continue</button> -->
+      <button class="govuk-button govuk-!-margin-right-9" type="button" (click)="onSubmit()">Continue</button>
+      <a role="button" class="govuk-button govuk-button--link govuk-!-margin-left-9" (click)="onCancel()">Cancel</a>
     </div>
-  </fieldset>
-</form>
+  </div>
+  <div class="govuk-grid-column-one-third">
+    <div class="govuk-!-margin-left-5 govuk-!-margin-top-8">
+      <app-selected-staff-panel [selectedWorkerCount]="selectedWorkers.length"></app-selected-staff-panel>
+    </div>
+  </div>
+</div>
