--- a/src/app/features/add-multiple-training/select-staff/select-staff.component.html
+++ b/src/app/features/add-multiple-training/select-staff/select-staff.component.html
@@ -55,77 +55,41 @@
       </div>
     </ng-container>
 
-    <div class="govuk-!-font-size-19 govuk-!-margin-bottom-5" #selectAllButton>
-      <span class="govuk-!-font-weight-bold"
-        >Showing {{ paginatedWorkers?.length }} of {{ totalWorkerCount }} staff</span
-      >
-      <span *ngIf="submitted && error" class="govuk-visually-hidden" id="selectStaff-error">Error:</span>
-      <a href="#" (click)="selectAllWorkers($event)" name="selectStaff" class="govuk-util__float-right">
-        {{ selectAll ? 'Deselect All' : 'Select all' }}</a
-      >
+    <div [class.govuk-form-group--error]="submitted && error">
+      <div class="govuk-!-font-size-19 govuk-!-margin-bottom-5">
+        <span class="govuk-!-font-weight-bold"
+          >Showing {{ paginatedWorkers?.length }} of {{ totalWorkerCount }} staff</span
+        >
+
+        <a href="#" (click)="selectAllWorkers($event)" class="govuk-util__float-right">
+          {{ selectAll ? 'Deselect All' : 'Select all' }}</a
+        >
+      </div>
+      <div *ngIf="submitted && error">
+        <span class="govuk-error-message">{{ this.errorsMap[0].type[0].message }}</span>
+      </div>
+      <dl class="govuk-summary-list govuk-summary-list--top-border" #selectAllButton>
+        <ng-container *ngFor="let worker of paginatedWorkers">
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">{{ worker.nameOrId }}</dt>
+            <dd class="govuk-summary-list__value">{{ worker.mainJob.title }}</dd>
+            <dd class="govuk-summary-list__actions">
+              <span *ngIf="submitted && error" class="govuk-visually-hidden" id="selectStaff-error">Error:</span>
+              <a href="#" name="selectStaff" (click)="selectWorker($event, worker.uid)">{{
+                selectAll || selectedWorkers?.includes(worker.uid) ? 'Deselect' : 'Select'
+              }}</a>
+            </dd>
+          </div>
+        </ng-container>
+      </dl>
     </div>
-    <dl class="govuk-summary-list govuk-summary-list--top-border">
-      <ng-container *ngFor="let worker of paginatedWorkers">
-        <div class="govuk-summary-list__row">
-          <dt class="govuk-summary-list__key">{{ worker.nameOrId }}</dt>
-          <dd class="govuk-summary-list__value">{{ worker.mainJob.title }}</dd>
-          <dd class="govuk-summary-list__actions">
-            <a href="#" (click)="selectWorker($event, worker.uid)">{{
-              selectAll || selectedWorkers?.includes(worker.uid) ? 'Deselect' : 'Select'
-            }}</a>
-          </dd>
-        </div>
-      </ng-container>
-    </dl>
     <app-pagination
       [itemsPerPage]="itemsPerPage"
       [totalNoOfItems]="totalWorkerCount"
       (currentPageIndexChange)="handlePageUpdate($event)"
       [currentPageIndex]="currentPageIndex"
     ></app-pagination>
-    <!-- </div> -->
-    <!-- <div class="govuk-form-group" [class.govuk-form-group--error]="submitted && form.invalid">
-        <span *ngIf="submitted && form?.invalid" id="selectStaff-error" class="govuk-error-message">
-          <span class="govuk-visually-hidden">Error:</span>
-          {{ getFirstErrorMessage('selectStaff') }}
-        </span>
-        <div class="govuk-checkboxes">
-          <div class="govuk-grid-column-full">
-            <div class="govuk-checkboxes__item govuk-!-margin-bottom-2">
-              <input
-                class="govuk-checkboxes__input"
-                type="checkbox"
-                id="selectAll"
-                name="selectAll"
-                [(ngModel)]="selectAll"
-                [ngModelOptions]="{ standalone: true }"
-                (ngModelChange)="selectAllWorkers($event)"
-              />
-              <label for="selectAll" class="govuk-label govuk-checkboxes__label"> Select all </label>
-            </div>
-          </div>
-          <ng-container *ngFor="let worker of selectStaff.controls; let i = index" formArrayName="selectStaff">
-            <div class="govuk-grid-column-one-third-from-desktop">
-              <div class="govuk-checkboxes__item govuk-!-margin-bottom-2">
-                <input
-                  class="govuk-checkboxes__input"
-                  type="checkbox"
-                  id="selectStaff-{{ i }}"
-                  name="selectStaff-{{ i }}"
-                  (change)="selectWorker(worker)"
-                  [checked]="worker.value.checked"
-                  [value]="worker.value.name"
-                />
-                <label for="selectStaff-{{ i }}" class="govuk-label govuk-checkboxes__label">
-                  {{ worker.value.name }}
-                </label>
-              </div>
-            </div>
-          </ng-container>
-        </div>
-      </div> -->
     <div class="govuk-button-group">
-      <!-- <button class="govuk-button govuk-!-margin-right-9" type="submit">Continue</button> -->
       <button class="govuk-button govuk-!-margin-right-9" type="button" (click)="onSubmit()">Continue</button>
       <a role="button" class="govuk-button govuk-button--link govuk-!-margin-left-9" (click)="onCancel()">Cancel</a>
     </div>
