feat(editMandatoryTrainingCategoriesAmendments): Added routing changes and some front end changes to add-mandatory training component. Moved list-mandatory training spec to use a setup function

--- a/src/app/features/add-mandatory-training/add-mandatory-training.component.html
+++ b/src/app/features/add-mandatory-training/add-mandatory-training.component.html
@@ -7,7 +7,9 @@
 </app-error-summary>
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-    <h1 class="govuk-heading-l">Add a mandatory training category</h1>
+    <h1 class="govuk-heading-l">
+      {{ renderAsEditMandatoryTraning ? 'Mandatory training category' : 'Add a mandatory training category' }}
+    </h1>
   </div>
 </div>
 <form #formEl novalidate (ngSubmit)="onSubmit()" [formGroup]="form">
