Add alert for successful deletion

--- a/src/app/features/add-mandatory-training/remove-all-selections-dialog.component.html
+++ b/src/app/features/add-mandatory-training/remove-all-selections-dialog.component.html
@@ -8,7 +8,11 @@
     </p>
 
     <div class="govuk-button-group">
-      <button class="govuk-button govuk-button--warning govuk-!-margin-right-9 govuk-!-margin-top-6" type="button">
+      <button
+        class="govuk-button govuk-button--warning govuk-!-margin-right-9 govuk-!-margin-top-6"
+        (click)="deleteMandatoryTraining()"
+        type="button"
+      >
         Remove categories
       </button>
 
