Add cancel link for delete confirmation page and change the name of file

--- a/src/app/features/add-mandatory-training/delete-all-mandatory-training.component.html
+++ b/src/app/features/add-mandatory-training/delete-all-mandatory-training.component.html
@@ -16,7 +16,13 @@
         Remove categories
       </button>
 
-      <a role="button" class="govuk-button govuk-button--link govuk-!-margin-left-9">Cancel</a>
+      <a
+        role="button"
+        draggable="false"
+        class="govuk-button govuk-button--link govuk-!-margin-left-9"
+        (click)="navigateToPreviousPage()"
+        >Cancel</a
+      >
     </div>
   </div>
 </div>
