create an error summary directive and implement it in select staff error component

--- a/src/app/shared/directives/error-summary/error-summary.component.html
+++ b/src/app/shared/directives/error-summary/error-summary.component.html
@@ -25,7 +25,7 @@
           </li>
         </ng-container>
       </ng-container>
-      <!-- <li *ngIf="serverError">
+      <li *ngIf="serverError">
         <a [routerLink]="'.'" [fragment]="'server-error'" [queryParamsHandling]="'merge'" [innerHTML]="serverError"></a>
       </li>
       <ng-container *ngIf="customErrors">
@@ -37,7 +37,7 @@
             [innerHTML]="customError.message"
           ></a>
         </li>
-      </ng-container> -->
+      </ng-container>
     </ul>
   </div>
 </div>
