--- a/src/app/features/add-multiple-training/select-staff/select-staff.component.html
+++ b/src/app/features/add-multiple-training/select-staff/select-staff.component.html
@@ -1,4 +1,5 @@
-<app-select-staff-error-summary *ngIf="submitted && error" [errorsMap]="errorsMap"> </app-select-staff-error-summary>
+<app-select-staff-error-summary *ngIf="submitted && error" [formErrorsMap]="errorsMap">
+</app-select-staff-error-summary>
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds-from-desktop">
