--- a/src/app/shared/directives/add-edit-training/add-edit-training.component.html
+++ b/src/app/shared/directives/add-edit-training/add-edit-training.component.html
@@ -34,7 +34,7 @@
               name="category"
               data-testid="trainingSelect"
             >
-              <option [ngValue]="null">Select a training category</option>
+              <option [ngValue]="null">Select the training category</option>
               <option *ngFor="let category of categories" [value]="category.id">
                 {{ category.category }}
               </option>
@@ -129,7 +129,7 @@
           </fieldset>
         </div>
 
-        <div class="govuk-character-count">
+        <div class="govuk-character-count govuk-!-margin-bottom-4">
           <div class="govuk-form-group" [class.govuk-form-group--error]="submitted && form.get('notes').invalid">
             <label class="govuk-label" for="notes"> Add notes </label>
             <span *ngIf="submitted && form.get('notes').invalid" id="notes-error" class="govuk-error-message">
