Add test for delete all mandatory trainings

--- a/src/app/features/add-mandatory-training/delete-mandatory-training/delete-all-mandatory-training.component.html
+++ b/src/app/features/add-mandatory-training/delete-mandatory-training/delete-all-mandatory-training.component.html
@@ -1,8 +1,6 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-    <h1 class="govuk-!-margin-bottom-8" id="dialogHeading">
-      You're about to remove all mandatory training categories for your workplace
-    </h1>
+    <h1 class="govuk-!-margin-bottom-8">You're about to remove all mandatory training categories for your workplace</h1>
     <p>
       If you do this, your workplace will not have any training set up as being mandatory for your staff at the moment.
     </p>
