Add test for cancel link

--- a/src/app/features/add-mandatory-training/delete-mandatory-training/delete-all-mandatory-training.component.html
+++ b/src/app/features/add-mandatory-training/delete-mandatory-training/delete-all-mandatory-training.component.html
@@ -1,13 +1,13 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-    <h1 class="govuk-!-margin-bottom-8">You're about to remove all mandatory training categories for your workplace</h1>
+    <h1 class="govuk-heading-l">You're about to remove all mandatory training categories for your workplace</h1>
     <p>
       If you do this, your workplace will not have any training set up as being mandatory for your staff at the moment.
     </p>
 
     <div class="govuk-button-group">
       <button
-        class="govuk-button govuk-button--warning govuk-!-margin-right-9 govuk-!-margin-top-6"
+        class="govuk-button govuk-button--warning govuk-!-margin-right-9 govuk-!-margin-top-4"
         (click)="deleteMandatoryTraining()"
         type="button"
       >
